--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource-variable/familjen-grotesk": "^5.0.14",
+    "@fontsource/darker-grotesque": "^5.0.20",
+    "@fontsource/space-grotesk": "^5.0.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
