--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://jmarcoz1.github.io/my-website",
-  "name": "my-website",
+  "homepage": "https://devjmarco.com",
+  "name": "devjmarco",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
