--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://jmarcoz1.github.io/my-website",
-  "name": "dvjmarco",
+  "name": "jorgemarcoarraez",
   "private": true,
   "version": "0.0.0",
   "type": "module",
